--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@mui/material": "^5.3.1",
     "@mui/styles": "^5.3.0",
     "@mui/system": "^5.3.0",
+    "@react-spring/parallax": "^9.4.2",
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
@@ -18,13 +19,16 @@
     "@types/node": "^16.11.21",
     "@types/react": "^17.0.38",
     "@types/react-dom": "^17.0.11",
+    "aos": "^2.3.4",
     "classnames": "^2.3.1",
     "framer-motion": "^6.2.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "5.0.0",
     "react-scroll": "^1.8.4",
+    "react-spring": "^9.4.2",
     "react-tsparticles": "^1.39.1",
+    "react-visibility-sensor": "^5.1.1",
     "sass": "^1.49.0",
     "typescript": "^4.5.5",
     "web-vitals": "^2.1.4"
