--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "framer-motion": "^6.2.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
     "react-scroll": "^1.8.4",
     "react-spring": "^9.4.2",
@@ -58,6 +59,7 @@
     ]
   },
   "devDependencies": {
+    "@types/react-scroll": "^1.8.3",
     "autoprefixer": "^10.4.2",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-config-airbnb-typescript": "^16.1.0",
